Refactored validation and implemented Word service and controller